--- a/index.html
+++ b/index.html
@@ -218,9 +218,9 @@
           'features that feel effortless to the user, yet are robust under the hood.',
           '',
           'Recent focus areas:',
-          '- Leading cross-functional delivery for customer-facing applications',
-          '- Partnering with design to create reusable component systems',
-          '- Coaching teams on technical discovery and async collaboration'
+          '- research on landslide prediction based on remote sensing projects',
+          '- Partnering with design to create psychology projects',
+          '- AI agents building'
         ],
         projects: [
           '> open projects',
@@ -232,7 +232,7 @@
         experience: [
           '> open experience',
           '',
-          'Current: Senior Software Engineer @ PHD',
+          'Current: Wuhan University @ PHD',
           '   - Leading a team delivering data-rich experiences for enterprise customers',
           '   - Designing APIs and tooling that scale across product surfaces',
           '',
@@ -240,7 +240,9 @@
           '   - Built zero-downtime deployment pipelines and observability dashboards',
           '   - Collaborated with research to prototype AR interactions for field technicians',
           '',
-          'Education: B.S. in Computer Science, Your University'
+          'Education: B.S. in Surveying, Chang'an University'
+          'Education: M.S. in Geographical Information Science, University of Queensland'
+          'Education: PHD in Photogrammetry and Remote Sensing, Wuhan University'
         ],
         contact: [
           '> open contact',
