--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <a href="#" data-target="projects">Projects</a>
         <a href="#" data-target="experience">Experience</a>
         <a href="#" data-target="contact">Contact</a>
-        <a href="https://github.com/your-handle">GitHub</a>
+        <a href="https://github.com/ragnarokhaa">GitHub</a>
         <a href="https://www.linkedin.com/in/your-handle">LinkedIn</a>
         <a href="mailto:ni654197330@gmail.com">Email</a>
         <a href="resume.pdf">Resume</a>
