--- a/index.html
+++ b/index.html
@@ -240,10 +240,10 @@
           '   - Built zero-downtime deployment pipelines and observability dashboards',
           '   - Collaborated with research to prototype AR interactions for field technicians',
           '',
-          'Education: B.S. in Surveying, Chang\'an University'
-          'Education: M.S. in Geographical Information Science, University of Queensland'
-          'Education: PHD in Photogrammetry and Remote Sensing, Wuhan University'
-        ],
+          'Education: B.S. in Surveying, Chang\'an University',
+          'Education: M.S. in Geographical Information Science, University of Queensland',
+          'Education: Ph.D. in Photogrammetry and Remote Sensing, Wuhan University'
+],
         contact: [
           '> open contact',
           '',
