--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <a href="#" data-target="experience">Experience</a>
         <a href="#" data-target="contact">Contact</a>
         <a href="https://github.com/ragnarokhaa">GitHub</a>
-        <a href="https://www.linkedin.com/in/your-handle">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/zixuan-ni-1377a5299/">LinkedIn</a>
         <a href="mailto:ni654197330@gmail.com">Email</a>
         <a href="resume.pdf">Resume</a>
       </nav>
